[metadata]
name = pynetest
version = 0.0.1
author = Avvir
author_email = tira@avvir.io
description = A BDD Testing framework for python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Avvir/pyne
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = pynetest
packages = find:
python_requires = >=3.8

[options.packages.find]
where = pynetest
